Use page preview in reader while loading

--- a/app/src/main/res/layout/layout_page_info.xml
+++ b/app/src/main/res/layout/layout_page_info.xml
@@ -11,7 +11,9 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:indeterminate="true"
-		android:max="100" />
+		android:max="100"
+		app:hideAnimationBehavior="escape"
+		app:showAnimationBehavior="outward" />
 
 	<LinearLayout
 		android:id="@+id/layout_error"
