--- a/app/src/debug/res/menu/opt_settings.xml
+++ b/app/src/debug/res/menu/opt_settings.xml
@@ -5,6 +5,12 @@
 	xmlns:tools="http://schemas.android.com/tools">
 
 	<item
+		android:id="@+id/action_ssiv_debug"
+		android:checkable="true"
+		android:title="SSIV debug"
+		app:showAsAction="never"
+		tools:ignore="HardcodedText" />
+	<item
 		android:id="@+id/action_leakcanary"
 		android:checkable="true"
 		android:title="LeakCanary"
