--- a/app/src/main/res/layout/layout_page_info.xml
+++ b/app/src/main/res/layout/layout_page_info.xml
@@ -13,7 +13,7 @@
 		android:indeterminate="true"
 		android:max="100"
 		app:hideAnimationBehavior="escape"
-		app:showAnimationBehavior="outward" />
+		app:showAnimationBehavior="none" />
 
 	<LinearLayout
 		android:id="@+id/layout_error"
@@ -40,7 +40,7 @@
 
 		<Button
 			android:id="@+id/button_retry"
-			style="@style/Widget.Material3.Button.TonalButton"
+			style="?materialButtonTonalStyle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="16dp"
@@ -48,7 +48,7 @@
 
 		<Button
 			android:id="@+id/button_error_details"
-			style="@style/Widget.Material3.Button.TextButton"
+			style="?borderlessButtonStyle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/details" />
