--- a/app/src/main/res/layout/layout_page_info.xml
+++ b/app/src/main/res/layout/layout_page_info.xml
@@ -5,34 +5,42 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:parentTag="android.widget.FrameLayout">
 
-	<com.google.android.material.progressindicator.LinearProgressIndicator
-		android:id="@+id/progressBar"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="top"
-		android:indeterminate="true"
-		android:visibility="gone"
-		app:hideAnimationBehavior="escape"
-		app:trackCornerRadius="0dp"
-		tools:visibility="visible" />
-
-	<TextView
-		android:id="@+id/textView_status"
+	<LinearLayout
+		android:id="@+id/layout_progress"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:layout_marginHorizontal="60dp"
-		android:gravity="center"
-		android:textAppearance="?textAppearanceBodyLarge"
-		tools:text="72%" />
+		android:gravity="center_horizontal"
+		android:orientation="vertical"
+		android:visibility="gone"
+		tools:visibility="visible">
+
+		<com.google.android.material.progressindicator.CircularProgressIndicator
+			android:id="@+id/progressBar"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/badge_offset"
+			android:indeterminate="true"
+			android:visibility="gone"
+			tools:visibility="visible" />
+
+		<TextView
+			android:id="@+id/textView_status"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:gravity="center"
+			android:textAppearance="?textAppearanceBodyLarge"
+			tools:text="72%" />
+	</LinearLayout>
 
 	<LinearLayout
 		android:id="@+id/layout_error"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:layout_marginStart="60dp"
-		android:layout_marginEnd="60dp"
+		android:layout_marginStart="56dp"
+		android:layout_marginEnd="56dp"
 		android:background="@drawable/bg_card"
 		android:gravity="center_horizontal"
 		android:orientation="vertical"
