Option to override manga title and cover

--- a/app/src/main/res/menu/mode_favourites.xml
+++ b/app/src/main/res/menu/mode_favourites.xml
@@ -34,6 +34,12 @@
 		app:showAsAction="ifRoom|withText" />
 
 	<item
+		android:id="@+id/action_edit_override"
+		android:icon="@drawable/ic_edit"
+		android:title="@string/edit"
+		app:showAsAction="ifRoom|withText" />
+
+	<item
 		android:id="@+id/action_mark_current"
 		android:icon="@drawable/ic_eye_check"
 		android:title="@string/mark_as_completed"
