--- a/app/src/main/res/menu/mode_local.xml
+++ b/app/src/main/res/menu/mode_local.xml
@@ -16,6 +16,12 @@
 		app:showAsAction="ifRoom|withText" />
 
 	<item
+		android:id="@+id/action_edit_override"
+		android:icon="@drawable/ic_edit"
+		android:title="@string/edit"
+		app:showAsAction="ifRoom|withText" />
+
+	<item
 		android:id="@+id/action_select_all"
 		android:icon="?actionModeSelectAllDrawable"
 		android:title="@android:string/selectAll"
