Improve reader scroll timer

--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -34,6 +34,17 @@
 		android:visibility="gone"
 		tools:visibility="visible" />
 
+	<org.koitharu.kotatsu.reader.ui.ScrollTimerControlView
+		android:id="@+id/timerControl"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom"
+		android:layout_margin="@dimen/screen_padding"
+		android:background="@drawable/bg_card"
+		android:elevation="@dimen/m3_card_elevated_elevation"
+		android:visibility="gone"
+		app:layout_dodgeInsetEdges="bottom" />
+
 	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/appbar_top"
 		android:layout_width="match_parent"
