--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -137,4 +137,9 @@
 		<item>@string/favourites</item>
 		<item>@string/saved_manga</item>
 	</string-array>
+	<string-array name="incognito_nsfw_options" translatable="false">
+		<item>@string/enable</item>
+		<item>@string/ask_every_time</item>
+		<item>@string/disable</item>
+	</string-array>
 </resources>
