--- a/app/src/main/res/layout/item_color_scheme.xml
+++ b/app/src/main/res/layout/item_color_scheme.xml
@@ -8,7 +8,7 @@
 	android:background="?selectableItemBackground"
 	android:orientation="vertical"
 	android:padding="6dp"
-	tools:theme="@style/Theme.Kotatsu.Miku">
+	tools:theme="@style/ThemeOverlay.Kotatsu.Miku">
 
 	<com.google.android.material.card.MaterialCardView
 		android:id="@+id/card"
@@ -88,7 +88,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:elegantTextHeight="false"
-		android:ellipsize="end"
+		android:ellipsize="middle"
 		android:paddingTop="4dp"
 		android:singleLine="true"
 		android:textAppearance="?attr/textAppearanceTitleSmall"
