--- a/app/src/main/res/menu/mode_bookmarks.xml
+++ b/app/src/main/res/menu/mode_bookmarks.xml
@@ -9,4 +9,10 @@
 		android:title="@string/remove"
 		app:showAsAction="ifRoom|withText" />
 
+	<item
+		android:id="@+id/action_save"
+		android:icon="@drawable/ic_save"
+		android:title="@string/save"
+		app:showAsAction="ifRoom|withText" />
+
 </menu>
