--- a/app/src/main/res/layout/layout_reader_actions.xml
+++ b/app/src/main/res/layout/layout_reader_actions.xml
@@ -6,7 +6,8 @@
 	tools:layout_height="wrap_content"
 	tools:layout_width="match_parent"
 	tools:orientation="horizontal"
-	tools:parentTag="android.widget.LinearLayout">
+	tools:parentTag="android.widget.LinearLayout"
+	tools:style="?dockedToolbarStyle">
 
 	<FrameLayout
 		android:layout_width="wrap_content"
@@ -14,9 +15,10 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/button_prev"
-			style="@style/Widget.Kotatsu.IconButton.Action"
+			style="?materialIconButtonStyle"
 			android:layout_width="48dp"
 			android:layout_height="48dp"
+			android:layout_gravity="center"
 			android:contentDescription="@string/prev_chapter"
 			app:icon="@drawable/ic_prev" />
 	</FrameLayout>
@@ -39,9 +41,10 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/button_next"
-			style="@style/Widget.Kotatsu.IconButton.Action"
+			style="?materialIconButtonStyle"
 			android:layout_width="48dp"
 			android:layout_height="48dp"
+			android:layout_gravity="center"
 			android:contentDescription="@string/next_chapter"
 			app:icon="@drawable/ic_next" />
 	</FrameLayout>
@@ -52,9 +55,10 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/button_save"
-			style="@style/Widget.Kotatsu.IconButton.Action"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			style="?materialIconButtonStyle"
+			android:layout_width="48dp"
+			android:layout_height="48dp"
+			android:layout_gravity="center"
 			android:contentDescription="@string/save_page"
 			app:icon="@drawable/ic_save" />
 	</FrameLayout>
@@ -65,10 +69,11 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/button_timer"
-			style="@style/Widget.Kotatsu.IconButton.Action"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:contentDescription="@string/save_page"
+			style="?materialIconButtonStyle"
+			android:layout_width="48dp"
+			android:layout_height="48dp"
+			android:layout_gravity="center"
+			android:contentDescription="@string/automatic_scroll"
 			app:icon="@drawable/ic_timer" />
 	</FrameLayout>
 
@@ -78,9 +83,10 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/button_screen_rotation"
-			style="@style/Widget.Kotatsu.IconButton.Action"
+			style="?materialIconButtonStyle"
 			android:layout_width="48dp"
 			android:layout_height="48dp"
+			android:layout_gravity="center"
 			android:contentDescription="@string/screen_orientation"
 			app:icon="@drawable/ic_screen_rotation" />
 	</FrameLayout>
@@ -90,10 +96,25 @@
 		android:layout_height="wrap_content">
 
 		<com.google.android.material.button.MaterialButton
-			android:id="@+id/button_pages_thumbs"
-			style="@style/Widget.Kotatsu.IconButton.Action"
+			android:id="@+id/button_bookmark"
+			style="?materialIconButtonStyle"
 			android:layout_width="48dp"
 			android:layout_height="48dp"
+			android:layout_gravity="center"
+			android:contentDescription="@string/bookmark_add"
+			app:icon="@drawable/ic_bookmark" />
+	</FrameLayout>
+
+	<FrameLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/button_pages_thumbs"
+			style="?materialIconButtonStyle"
+			android:layout_width="48dp"
+			android:layout_height="48dp"
+			android:layout_gravity="center"
 			android:contentDescription="@string/pages"
 			app:icon="@drawable/ic_grid" />
 	</FrameLayout>
@@ -104,9 +125,10 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/button_options"
-			style="@style/Widget.Kotatsu.IconButton.Action"
+			style="?materialIconButtonStyle"
 			android:layout_width="48dp"
 			android:layout_height="48dp"
+			android:layout_gravity="center"
 			android:contentDescription="@string/options"
 			app:icon="@drawable/abc_ic_menu_overflow_material" />
 	</FrameLayout>
