--- a/app/src/main/res/menu/opt_reader.xml
+++ b/app/src/main/res/menu/opt_reader.xml
@@ -4,10 +4,10 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<item
-		android:id="@+id/action_bookmark"
-		android:enabled="false"
-		android:icon="@drawable/ic_bookmark"
-		android:title="@string/bookmark_add"
+		android:id="@+id/action_info"
+		android:icon="@drawable/ic_info_outline"
+		android:title="@string/details"
+		android:visible="false"
 		app:showAsAction="always" />
 
 </menu>
