--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -132,6 +132,7 @@
 		<item>@string/screen_orientation</item>
 		<item>@string/save_page</item>
 		<item>@string/automatic_scroll</item>
+		<item>@string/bookmark_add</item>
 	</string-array>
 	<string-array name="list_badges" translatable="false">
 		<item>@string/favourites</item>
